@@ -48,6 +48,7 @@ static Shnode_t	*makeparent(Lex_t*, int, Shnode_t*);
 static Shnode_t	*makelist(Lex_t*, int, Shnode_t*, Shnode_t*);
 static struct argnod	*qscan(struct comnod*, int);
 static struct ionod	*inout(Lex_t*,struct ionod*, int);
+static char		inout_found_procsub;
 static Shnode_t	*sh_cmd(Lex_t*,int,int);
 static Shnode_t	*term(Lex_t*,int);
 static Shnode_t	*list(Lex_t*,int);
@@ -1583,6 +1584,7 @@ static Shnode_t *simple(Lex_t *lexp,int flag, struct ionod *io)
 			lexp->token = tok = 0;
 		if((tok==IPROCSYM || tok==OPROCSYM))
 		{
+	procsub:
 			argp = process_sub(lexp,tok);
 			argno = -1;
 			*argtail = argp;
@@ -1655,6 +1657,8 @@ static Shnode_t *simple(Lex_t *lexp,int flag, struct ionod *io)
 			}
 			else
 				t->comio = io = inout(lexp,(struct ionod*)0,0);
+			if(inout_found_procsub)
+				goto procsub;
 		}
 	}
 	*argtail = 0;
@@ -1753,6 +1757,9 @@ static struct ionod	*inout(Lex_t *lexp,struct ionod *lastio,int flag)
 	Stk_t			*stkp = sh.stk;
 	char *iovname=0;
 	register int		errout=0;
+	/* return if a process substitution is found without a redirection */
+	if(inout_found_procsub = (token==IPROCSYM || token==OPROCSYM))
+		return(lastio);
 	if(token==IOVNAME)
 	{
 		iovname=lexp->arg->argval+1;
