@@ -3,6 +3,12 @@ For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
 
 Any uppercase BUG_* names are modernish shell bug IDs.
 
+2022-07-05:
+
+- Fixed a spurious syntax error on encountering a process substitution
+  following a redirection without being an argument to a redirection.
+  For example, this now writes 'OK' to standard error: cat >&2 <(echo OK)
+
 2022-07-02:
 
 - Fixed a bug where, if the last command in a subshell was an external
